--- a/africa-health-spending/notebooks/afriHealth_capstone_analysis.ipynb
+++ b/africa-health-spending/notebooks/afriHealth_capstone_analysis.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4f6b2ad1-6497-4c38-98d7-f7e3ea4ac2ed",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
     "# =============================================================================\n",
     "\n",
     "# Load the unified dataset\n",
-    "df = pd.read_csv('african_health_spending_outcomes.csv')\n",
+    "df = pd.read_csv('data/final-processed-data/african_health_spending_outcomes.csv')   #update csv location path as required\n",
     "\n",
     "# Display basic dataset info\n",
     "print(f\"✅ Dataset loaded successfully\")\n",
