--- a/africa-health-spending/notebooks/who_ghed_data_aggregation_processing.ipynb
+++ b/africa-health-spending/notebooks/who_ghed_data_aggregation_processing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6cba0bfe-9d6c-44c3-9532-2b713dc4df1e",
    "metadata": {},
    "outputs": [
@@ -47,8 +47,8 @@
     "from functools import reduce\n",
     "\n",
     "# --- 1. Set paths ---\n",
-    "data_folder = 'health-financing/data'          # Folder with 12 indicator CSVs\n",
-    "codes_folder = 'health-financing/codes'        # Folder with COUNTRY.csv, REGION.csv, etc.\n",
+    "data_folder = 'data/raw-data/who-ghed/data'          # Folder with 12 indicator CSVs (update path as required)\n",
+    "codes_folder = 'data/raw-data/who-ghed/codes'        # Folder with COUNTRY.csv, REGION.csv, etc. (update path as required)\n",
     "\n",
     "# --- 2. Load COUNTRY.csv and inspect structure ---\n",
     "country_file = os.path.join(codes_folder, 'COUNTRY.csv')\n",
